Solved overflow problem

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -26,6 +26,6 @@ body {
 }
 
 main {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 110px;
+    margin-bottom: 110px;
 }
