--- a/src/css/components/body.css
+++ b/src/css/components/body.css
@@ -1,7 +1,6 @@
-body {
+xbody {
     display: grid;
     grid-gap: 10px;
     grid-template-rows: 1fr auto 1fr;
     line-height: 1.5;
-    height: 100%;
 }
